bases/olympus/hermes/essentials/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: hermes.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
  tls:
    - hosts:
        - hermes.${cluster_name}.${cluster_location}.bink.sh
